# EduPrompt-AI

./: README.md  main.py  pyproject.toml  requirements.txt
results/: quiz_results_20250729_141724.csv
src/common/: common_exception.py  logger.py
src/config/: settings.py
src/generator/: question_generator.py
src/llm/: groq_client.py
src/models/: question_schemas.py
src/prompts/: templates.py
src/utils/: helpers.py
